--- a/index.html
+++ b/index.html
@@ -67,6 +67,22 @@
       <section class="todo-list">
         <h3>TODO LIST</h3>
         <div class="list" id="todo-list">
+          <!-- <div class="todo-item">
+            <label>
+              <input type="checkbox" />
+              <span class="bubble business"></span>
+            </label>
+
+            <div class="todo-content">
+              <input type="text" value="Make video" readonly />
+            </div>
+
+            <div class="actions">
+              <button class="edit">Edit</button>
+              <button class="delete">Delete</button>
+            </div>
+          </div>
+
           <div class="todo-item">
             <label>
               <input type="checkbox" />
@@ -81,7 +97,7 @@
               <button class="edit">Edit</button>
               <button class="delete">Delete</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
