--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <main class="app">
       <section class="greeting">
-        <h2>Hi <input type="text" id="name" placeholder="name" /></h2>
+        <h2 class="title">
+          Hi <input type="text" id="name" placeholder="Name here" />
+        </h2>
       </section>
 
       <section class="create-todo">
